--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
         <div class="hero-content fade-in-up">
             <h1>ETFsCanada.ca</h1>
             <p>Your Modern Guide to Understanding & Comparing <span class="tooltip" data-tooltip="Exchange-Traded Fund: A type of investment fund traded on stock exchanges, similar to stocks.">ETFs</span> in Canada</p>
-            <a href="#categories" class="cta-button">Explore ETFs</a>
+            <a href="#categories" class="cta-button">Explore ETF Categories</a>
         </div>
     </header>
 
     <nav class="sticky-nav">
-         <ul>
+        <button class="mobile-nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <i class="fas fa-bars open-icon"></i>
+            <i class="fas fa-times close-icon"></i>
+        </button>
+         <ul id="primary-navigation">
              <li><a href="index.html">Home</a></li>
             <li><a href="all-in-one-etfs.html">All-in-One</a></li>
             <li><a href="regions.html">Regions</a></li>
@@ -34,8 +38,8 @@
         </ul>
     </nav>
 
-    <main>
-        <section id="welcome" class="fade-in-up">
+    <main class="site-main">
+        <section id="welcome" class="welcome-section fade-in-up">
             <h2>Welcome to ETFsCanada.ca</h2>
             <p>
                 Navigating the growing world of <span class="tooltip" data-tooltip="Exchange-Traded Fund: A type of investment fund traded on stock exchanges.">ETFs</span> in Canada can be complex.
@@ -56,21 +60,46 @@
             </div>
         </section>
 
-        <section id="categories" class="fade-in-up">
+        <section id="categories" class="categories-section fade-in-up">
             <h2>Explore ETF Categories</h2>
+            <p>Dive into specific ETF types to find and compare funds.</p>
             <div class="category-links">
-                <a href="all-in-one-etfs.html" class="category-link">All-in-One</a>
-                <a href="regions.html" class="category-link">Regional Equity</a>
-                <a href="sectors.html" class="category-link">Sector</a>
-                <a href="fixed-income.html" class="category-link">Fixed Income</a>
-                <a href="factor.html" class="category-link">Factor / Smart Beta</a>
-                <a href="thematic.html" class="category-link">Thematic</a>
-                <a href="commodities.html" class="category-link">Commodity</a>
-                <a href="crypto.html" class="category-link">Crypto</a>
+                <a href="all-in-one-etfs.html" class="category-link">
+                    <i class="fas fa-cubes category-icon"></i>
+                    <span>All-in-One</span>
+                </a>
+                <a href="regions.html" class="category-link">
+                     <i class="fas fa-globe-americas category-icon"></i>
+                     <span>Regional Equity</span>
+                </a>
+                <a href="sectors.html" class="category-link">
+                    <i class="fas fa-industry category-icon"></i>
+                    <span>Sector</span>
+                </a>
+                <a href="fixed-income.html" class="category-link">
+                     <i class="fas fa-chart-line category-icon"></i>
+                     <span>Fixed Income</span>
+                 </a>
+                <a href="factor.html" class="category-link">
+                    <i class="fas fa-balance-scale category-icon"></i>
+                    <span>Factor / Smart Beta</span>
+                </a>
+                <a href="thematic.html" class="category-link">
+                    <i class="fas fa-lightbulb category-icon"></i>
+                    <span>Thematic</span>
+                </a>
+                <a href="commodities.html" class="category-link">
+                    <i class="fas fa-leaf category-icon"></i>
+                    <span>Commodity</span>
+                </a>
+                <a href="crypto.html" class="category-link">
+                     <i class="fab fa-bitcoin category-icon"></i>
+                     <span>Crypto</span>
+                 </a>
             </div>
         </section>
 
-         <section id="support" class="fade-in-up">
+         <section id="support" class="support-section fade-in-up">
             <h2>Support ETFsCanada.ca</h2>
             <p>
                 This website is independently developed and maintained. It runs on a minimal budget with no external funding or advertising.
@@ -100,14 +129,16 @@
             </div>
         </section>
 
-
+         <div class="data-date"> <!-- Moved data-date outside section, before disclaimer -->
+             Data As Of: March 29, 2025. Comparison data requires verification.
+        </div>
         <p class="disclaimer">
-             <strong>Disclaimer:</strong> Information on this site is for informational purposes only and does not constitute financial advice. Always verify details with official fund documents before investing. Performance data is historical and not indicative of future results. <span class="data-date">Comparison data requires verification. Data As Of: March 28, 2025.</span>
+             <strong>Disclaimer:</strong> Information on this site is for informational purposes only and does not constitute financial advice. Always verify details with official fund documents before investing. Performance data is historical and not indicative of future results.
         </p>
     </main>
 
      <footer>
-         <p>&copy; ETFsCanada.ca 2025 | Data manually collected, verify with source. | Contact: <a href="mailto:shane@leedham.xyz">shane@leedham.xyz</a></p>
+         <p>© ETFsCanada.ca 2025 | Data manually collected, verify with source. | Contact: <a href="mailto:shane@leedham.xyz">shane@leedham.xyz</a></p>
     </footer>
 
     <script src="script.js"></script>
